1:1문의 기능 활성화